FSPA-464 remove odd code, code refactoring

--- a/src/app/companies/components/company-cards/company-cards.component.scss
+++ b/src/app/companies/components/company-cards/company-cards.component.scss
@@ -1,5 +1,15 @@
 @import '../../../../assets/styles/variables';
 
+// :host {
+//
+//
+//   &:hover {
+//     .card {
+//       background: $white;
+//     }
+//   }
+// }
+
 company-card {
   background: transparent;
   color: $dark-grey;
