--- a/src/app/companies/components/company-detail/components/company-contact/company-contact.component.html
+++ b/src/app/companies/components/company-detail/components/company-contact/company-contact.component.html
@@ -1,6 +1,6 @@
 <div class="location-container hovered-bg">
   <div class="left">
-      <bd-user-circle class="initials-circle" [parentHover]="parentHover" [initials]="contactInitials">
+      <bd-user-circle class="initials-circle" [initials]="contactInitials">
       </bd-user-circle>
       <div class="full-name-icons-container">
         <div class="full-name hovered-text">
