--- a/src/app/shared/components/bd-icons/bd-circle/bd-circle.component.html
+++ b/src/app/shared/components/bd-icons/bd-circle/bd-circle.component.html
@@ -1,5 +1,5 @@
-<div [class.active]="active" class="circle-container">
-  <div class="circle {{size}}" [class.parent-hover]="parentHover">
+<div class="circle-container">
+  <div class="circle {{size}}">
   {{dataInitials}}
   </div>
 </div>
