--- a/src/app/shared/components/bd-icons/bd-circle/bd-circle.component.scss
+++ b/src/app/shared/components/bd-icons/bd-circle/bd-circle.component.scss
@@ -51,3 +51,18 @@ $small-size: 10px;
     }
   }
 }
+
+// :host-context(.parent-hover) {
+//
+//   &.card {
+//     background: green!important;
+//
+//     .card-section {
+//       background: red!important;
+//
+//       .left {
+//         background: red;
+//       }
+//     }
+//   }
+// }
