--- a/src/app/shared/components/bd-icons/bd-user-circle/bd-user-circle.component.scss
+++ b/src/app/shared/components/bd-icons/bd-user-circle/bd-user-circle.component.scss
@@ -1,1 +1,17 @@
+:host-context(.parent-hover) {
+  &.card {
+    background: green!important;
 
+    .card-section {
+      background: red!important;
+
+      .left {
+        background: red;
+
+        .initials-circle {
+          background: red;
+        }
+      }
+    }
+  }
+}
