--- a/src/app/base/base-card/base-card.component.scss
+++ b/src/app/base/base-card/base-card.component.scss
@@ -70,15 +70,14 @@
   }
 }
 
-:host-context(.parent-hover) {
-  background: $white;
+:host-context():hover {
+  background: red;
 
   &.card {
     color: $black;
-    transition: all .5s;
+    transition: all 0.5s;
 
     .card-section {
-
       .status {
         opacity: 1;
       }
