--- a/src/app/equipment/components/equipment-cards/equipment-cards.component.scss
+++ b/src/app/equipment/components/equipment-cards/equipment-cards.component.scss
@@ -17,3 +17,21 @@ equipment-card {
     }
   }
 }
+
+:host() {
+  &:hover {
+    background: red;
+
+    &.card {
+      color: $black;
+      background: red;
+      transition: all 0.5s;
+
+      .card-section {
+        .status {
+          opacity: 1;
+        }
+      }
+    }
+  }
+}
