--- a/src/app/shared/components/bd-icons/bd-company-circle/bd-company-circle.component.html
+++ b/src/app/shared/components/bd-icons/bd-company-circle/bd-company-circle.component.html
@@ -1,1 +1,1 @@
-<bd-circle [initials]="companyInitials" [size]="size" [active]="active" [parentHover]="parentHover"></bd-circle>
+<bd-circle [initials]="companyInitials" [size]="size"></bd-circle>
