FSPA-511 #comment added asterisk to First Name and Last Name inside personal info section, fixed styles

--- a/src/app/forms/driver-form/driver-form.component.html
+++ b/src/app/forms/driver-form/driver-form.component.html
@@ -3,18 +3,18 @@
 	<bd-form-section [disabled]="disabled" [labelText]="'PERSONAL INFO'">
 		<div class="section">
 			 <bd-validator [component]="driverForm.controls.firstName" [errorDefs]="{required: 'Firstname is required'}">
-				<bd-input class="bd-form-control left-control" formControlName="firstName" [placeholder]="'First Name'"></bd-input>
+				<bd-input class="bd-form-control left-control" formControlName="firstName" [placeholder]="'First Name *'"></bd-input>
 			</bd-validator>
 			<bd-input class="bd-form-control middle-control" formControlName="middleName" [placeholder]="'Middle Name'"></bd-input>
 			<bd-validator [component]="driverForm.controls.lastName" [errorDefs]="{required: 'Lastname is required'}">
-				<bd-input class="bd-form-control right-control" formControlName="lastName" [placeholder]="'Last Name'"></bd-input>
+				<bd-input class="bd-form-control right-control" formControlName="lastName" [placeholder]="'Last Name *'"></bd-input>
 			</bd-validator>
 		</div>
 		<bd-form-datepicker
 			class="bd-form-control"
 			formControlName="birthDate"
 			[labelText]="'Date Of Birth'"
-			[minDate]="minBirthDate" 
+			[minDate]="minBirthDate"
 			[maxDate]="maxBirthDate">
 		</bd-form-datepicker>
 		<bd-input class="bd-form-control" formControlName="ssn" [labelText]="'SSN'"></bd-input>
