--- a/src/app/shared/components/bd-icons/bd-circle/bd-circle.component.scss
+++ b/src/app/shared/components/bd-icons/bd-circle/bd-circle.component.scss
@@ -52,17 +52,15 @@ $small-size: 10px;
   }
 }
 
-// :host-context(.parent-hover) {
-//
-//   &.card {
-//     background: green!important;
-//
-//     .card-section {
-//       background: red!important;
-//
-//       .left {
-//         background: red;
-//       }
-//     }
-//   }
-// }
+:host-context(.interactive-panel:hover) {
+  .circle {
+    background: red;
+  }
+
+}
+
+:host-context(.interactive-panel .active) {
+  .circle {
+    background: green !important;
+  }
+}
