--- a/src/app/shared/components/bd-icons/bd-circle/bd-circle.component.scss
+++ b/src/app/shared/components/bd-icons/bd-circle/bd-circle.component.scss
@@ -34,33 +34,25 @@ $small-size: 10px;
       margin: 0;
       font-size: $small-size - 4px;
     }
-
-    &.parent-hover {
-      background: $black;
-    }
-  }
-
-  &.active {
-    border: 1px solid $silver;
-    background: $black;
-
-    .circle {
-      background: $silver;
-      color: $mako;
-      font-weight: bold;
-    }
   }
 }
 
 :host-context(.interactive-panel:hover) {
   .circle {
-    background: red;
+    background: $black;
   }
 
 }
 
 :host-context(.interactive-panel .active) {
+  .circle-container {
+    border: 1px solid $silver;
+    background: $black;
+  }
+
   .circle {
-    background: green !important;
+    background: $silver;
+    color: $mako;
+    font-weight: bold;
   }
 }
