--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.html
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.html
@@ -1,14 +1,13 @@
 <div dropdown [autoClose]="autoClose" class="bd-dropdown-container" [class.bd-disabled]="disabled" name="bd-dropdown-container" (onToggle)="onToggle($event)" [class.bd-focused]="_isOpen">
   <div *ngIf="!toogleTemplate" dropdownToggle [isDisabled]="disabled"
     id="bd-dropdown"
-    class="bd-dropdown-wrapper hovered-bg"
+    class="bd-dropdown-wrapper"
     name="bd-dropdown-wrapper">
       <div *ngIf="labelText" class="bd-dropdown-label">
         <label>{{labelText}}</label>
       </div>
       <div class="bd-dropdown-value" name="bd-dropdown-value">
         <span
-          class="hovered-text"
           [class.item-selected]="isSelectedValue">
             {{currentDisplayText}}
         </span>
@@ -30,7 +29,7 @@
     <ul>
       <li
         *ngIf="dropdownHeaderTemplate"
-        class="dropdown-header hovered-text"
+        class="dropdown-header"
         (click)="_handleDropdownHeaderClick($event)">
           <template
             [ngTemplateOutlet]="dropdownHeaderTemplate">
@@ -42,7 +41,7 @@
         (click)="_handleDropdownHeaderClick($event)">
           {{clearLabel}}
       </li>
-      <li *ngFor="let item of items" class="hovered-text" [ngClass]="{'template-item': dropdownItemTemplate}"
+      <li *ngFor="let item of items" [ngClass]="{'template-item': dropdownItemTemplate}"
           (click)="_handleDropdownItemClick($event, item)">
         <template *ngIf="dropdownItemTemplate"
           [ngTemplateOutlet]="dropdownItemTemplate"
@@ -55,7 +54,7 @@
      <li
        *ngIf="dropdownFooterTemplate"
        dropdownFooter="dropdownFooter"
-       class="dropdown-footer hovered-text"
+       class="dropdown-footer"
        (click)="_handleFooterClick($event)">
          <template [ngTemplateOutlet]="dropdownFooterTemplate">
          </template>
