--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -31,28 +31,28 @@
   }
 }
 
-@mixin hovered {
-
-  .hovered-text {
-    color: $dark-grey;
-    transition: all 500ms;
-  }
-
-  &.parent-hover {
-    .hovered-text {
-      color: $black;
-      transition: all 500ms;
-    }
-
-    .hovered-bg {
-      background: $white;
-      border-bottom: $border;
-      transition: all 500ms;
-
-      .left {
-        border-right: $border;
-        transition: all 500ms;
-      }
-    }
-  }
-}
+// @mixin hovered {
+//
+//   .hovered-text {
+//     color: $dark-grey;
+//     transition: all 500ms;
+//   }
+//
+//   &.parent-hover {
+//     .hovered-text {
+//       color: $black;
+//       transition: all 500ms;
+//     }
+//
+//     .hovered-bg {
+//       background: $white;
+//       border-bottom: $border;
+//       transition: all 500ms;
+//
+//       .left {
+//         border-right: $border;
+//         transition: all 500ms;
+//       }
+//     }
+//   }
+// }
