FSPA-464 #comment remove odd code, code refactoring

--- a/src/app/companies/components/company-detail/components/company-basic-information/company-basic-information.component.scss
+++ b/src/app/companies/components/company-detail/components/company-basic-information/company-basic-information.component.scss
@@ -59,3 +59,9 @@ $element-height: 18px;
     }
   }
 }
+
+@include hovered-text;
+
+:host-context(.interactive-panel:hover) {
+  @include hovered-bg;
+}
