--- a/src/app/companies/components/company-detail/components/company-address/company-address.component.scss
+++ b/src/app/companies/components/company-detail/components/company-address/company-address.component.scss
@@ -21,3 +21,9 @@ $element-height: 18px;
     }
   }
 }
+
+@include hovered-text;
+
+:host-context(.interactive-panel:hover) {
+  @include hovered-bg;
+}
