--- a/src/app/companies/components/company-detail/components/company-contact/company-contact.component.scss
+++ b/src/app/companies/components/company-detail/components/company-contact/company-contact.component.scss
@@ -27,3 +27,9 @@ $element-height: 18px;
     }
   }
 }
+
+@include hovered-text;
+
+:host-context(.interactive-panel:hover) {
+  @include hovered-bg;
+}
