--- a/src/app/shared/components/form-navigation/form-navigation.component.scss
+++ b/src/app/shared/components/form-navigation/form-navigation.component.scss
@@ -65,27 +65,6 @@ form-navigation {
       }
     }
   }
-
-  &.parent-hover {
-    .form-navigation {
-      background: $white;
-
-      .top-panel {
-        .title {
-          color: $black;
-        }
-      }
-
-      .content {
-
-        span {
-          &.active {
-            color: $black;
-          }
-        }
-      }
-    }
-  }
 }
 
 .bd-disabled {
@@ -107,5 +86,24 @@ form-navigation {
         }
       }
     }
+  }
+}
+
+:host-context(.interactive-panel:hover) {
+  form-navigation {
+
+    .form-navigation {
+
+      .top-panel {
+
+        .title {
+          color: red;
+        }
+      }
+    }
+  }
+
+  .title {
+    color: red;
   }
 }
