FSPA-464 #comment added part of interactive styles, code refactoring

--- a/src/app/equipment/components/equipment-detail/components/equipment-employment/equipment-employment.component.html
+++ b/src/app/equipment/components/equipment-detail/components/equipment-employment/equipment-employment.component.html
@@ -1,5 +1,5 @@
-<div class="employment-container">
-    <section class="general-info">
+<div class="employment-container hovered-bg">
+    <section class="general-info left">
         <div class="vin">
             <span class="value">VIN: {{equipment.vin}}</span>
         </div>
