--- a/src/app/companies/components/company-detail/components/company-basic-information/company-basic-information.component.scss
+++ b/src/app/companies/components/company-detail/components/company-basic-information/company-basic-information.component.scss
@@ -8,24 +8,13 @@ $element-height: 18px;
   width: 100%;
   font-size: $tiny-font-size;
   line-height: $element-height;
+  border-bottom: $default-border;
 
   .left {
     display: flex;
     width: 50%;
     padding: $default-margin;
-
-    .cropped-company-name {
-      display: flex;
-      width: 28px;
-      height: 28px;
-      margin: 4px 0;
-      background: $nevada;
-      color: $white;
-      font-size: $mini-font-size;
-      border-radius: $circle-radius;
-      justify-content: center;
-      align-items: center;
-    }
+    border-right: $default-border;
 
     .name-type {
       overflow: hidden;
