FSPA-464 added part of interactive styles to driver

--- a/src/app/drivers/components/driver-cards/driver-cards.component.html
+++ b/src/app/drivers/components/driver-cards/driver-cards.component.html
@@ -1,6 +1,7 @@
 <driver-card
 *ngFor="let driver of this.drivers; trackBy: trackBy;"
 [item]="driver"
+class="card"
 [class.active]="isActive(driver.id)"
 (select)="onCardSelect($event)"
 >
