--- a/src/app/drivers/components/driver-detail/components/driver-license/driver-license.component.html
+++ b/src/app/drivers/components/driver-detail/components/driver-license/driver-license.component.html
@@ -1,8 +1,8 @@
-<div class="license-container">
-  <div class="top">
+<div class="license-container hovered-bg">
+  <div class="top hovered-bg">
     <div class="left">
-      <span class="license-number">{{driver.license.number}}</span>
-      <span class="license-class">{{licenseClassText}}</span>
+      <span class="license-number hovered-text">{{driver.license.number}}</span>
+      <span class="license-class hovered-text">{{licenseClassText}}</span>
     </div>
     <div class="right">
       <span class="state-issued">{{driver.license.stateIssued}}</span>
@@ -12,11 +12,11 @@
   <div class="bottom">
     <div class="endorsements-container">
       <span class="bottom-label">Endors:</span>
-      <span class="types">{{endorsementsTypes}}</span>
+      <span class="types hovered-text">{{endorsementsTypes}}</span>
     </div>
     <div class="restrictions-container">
       <span class="bottom-label">Restrict:</span>
-      <span class="types">{{restrictionsTypes}}</span>
+      <span class="types hovered-text">{{restrictionsTypes}}</span>
     </div>
   </div>
 </div>
