--- a/src/app/drivers/components/driver-detail/components/driver-information/driver-information.component.html
+++ b/src/app/drivers/components/driver-detail/components/driver-information/driver-information.component.html
@@ -1,10 +1,10 @@
-<div class="information-container">
+<div class="information-container hovered-bg">
   <div class="left">
     <div class="top">
       <bd-user-circle class="initials-circle" [initials]="driverInitials">
       </bd-user-circle>
       <div class="top-right">
-        <div class="full-name">
+        <div class="full-name hovered-text">
           {{driver.firstName}} {{driver.lastName}}
         </div>
         <div class="top-icons">
@@ -24,7 +24,7 @@
         <span class="bottom-label">SSN:</span>
         <span class="ssn">{{driver.ssn}}</span>
       </div>
-      <div class="driver-type">
+      <div class="driver-type hovered-text">
         {{driverType}}
       </div>
     </div>
