--- a/src/app/drivers/components/driver-detail/components/driver-payment-type/driver-payment-type.component.html
+++ b/src/app/drivers/components/driver-detail/components/driver-payment-type/driver-payment-type.component.html
@@ -1,4 +1,4 @@
-<div class="price">
-  <span>{{paymentTypeText}}:</span>
-  <span class="rate">{{driver.rate}} {{paymentOptionIcon}}</span>
+<div class="price hovered-bg">
+  <span class="hovered-text">{{paymentTypeText}}:</span>
+  <span class="rate hovered-text">{{driver.rate}} {{paymentOptionIcon}}</span>
 </div>
