--- a/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.scss
+++ b/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../assets/styles/variables';
+@import '../../../../assets/styles/mixins';
 
 .bd-checkboxes {
   position: relative;
@@ -11,7 +12,6 @@
   min-height: $form-control-height;
   border-bottom: 1px solid $grey;
   margin-bottom: 0;
-  background-color: inherit;
   box-shadow: inherit;
 
   .bd-label {
