--- a/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.html
+++ b/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.html
@@ -1,4 +1,4 @@
-<div class="bd-checkboxes" [class.bd-disabled]="disabled">
+<div class="bd-checkboxes hovered-bg" [class.bd-disabled]="disabled">
   <div class="bd-label">
     {{labelText}}
   </div>
