--- a/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.scss
+++ b/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.scss
@@ -7,6 +7,7 @@
   overflow: hidden;
   width: 100%;
   padding: 0 $default-margin;
+  background-color: $serenity;
   align-items: center;
   flex-direction: row;
   min-height: $form-control-height;
