FSPA-464 refactoring navigation bar for new styles

--- a/src/app/drivers/components/driver-edit.component.html
+++ b/src/app/drivers/components/driver-edit.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="selectedItem">
+<div class="interactive-panel" *ngIf="selectedItem">
   <bd-form-spinner *ngIf="isLoading$ | async"></bd-form-spinner>
   <form-navigation
     [disabled]="isLoading"
