FSPA-503 fix: calendar under buttons

--- a/src/app/shared/components/datepicker/styles/ngb-datepicker.scss
+++ b/src/app/shared/components/datepicker/styles/ngb-datepicker.scss
@@ -15,7 +15,7 @@
 
 :host(.ngb-datepicker-popup-container) {
   position: absolute;
-  z-index: $form-control-popup-z-index;
+  z-index: $calendar-z-index;
   display: block;
   width: 100%;
   padding: 0;
