--- a/src/app/forms/driver-form/driver-form.component.scss
+++ b/src/app/forms/driver-form/driver-form.component.scss
@@ -1,6 +1,6 @@
 @import '../../../assets/styles/form-control';
 @import '../../../assets/styles/styles'; 
 
-.section {
+.name-section {
   display: flex;
 }
