FSPA-464 #commemnt code refactoring

--- a/src/app/drivers/components/driver-cards/driver-cards.component.html
+++ b/src/app/drivers/components/driver-cards/driver-cards.component.html
@@ -1,8 +1,8 @@
 <driver-card
 *ngFor="let driver of this.drivers; trackBy: trackBy;"
 [item]="driver"
+[active]="isActive(driver.id)"
 class="card"
-[class.active]="isActive(driver.id)"
 (select)="onCardSelect($event)"
 >
 </driver-card>
