--- a/src/app/companies/components/company-detail/company-detail.component.html
+++ b/src/app/companies/components/company-detail/company-detail.component.html
@@ -3,8 +3,8 @@
   </form-navigation>
   <div class="company-detail-container">
     <navigation-anchor id="basic-information"></navigation-anchor>
-    <bd-view-detail-section class="bd-view-detail-section" [labelText]="'BASIC INFORMATION'" [addButton]="false" (editClick)="onEditInfoClick()">
-      <company-basic-information class="company-basic-information" [company]="selectedItem"></company-basic-information>
+    <bd-view-detail-section [labelText]="'BASIC INFORMATION'" [addButton]="false" (editClick)="onEditInfoClick()">
+      <company-basic-information [company]="selectedItem"></company-basic-information>
     </bd-view-detail-section>
     <navigation-anchor id="address"></navigation-anchor>
     <bd-view-detail-section [labelText]="'Address'" [addContent]="'add address'" [editButton]="false">
