--- a/src/app/companies/components/company-detail/components/company-contact/company-contact.component.html
+++ b/src/app/companies/components/company-detail/components/company-contact/company-contact.component.html
@@ -1,9 +1,9 @@
-<div class="location-container hovered-bg">
+<div class="location-container interactive-background">
   <div class="left">
       <bd-user-circle class="initials-circle" [initials]="contactInitials">
       </bd-user-circle>
       <div class="full-name-icons-container">
-        <div class="full-name hovered-text">
+        <div class="full-name interactive-text">
           {{contact.firstName}} {{contact.lastName}}
         </div>
         <div class="icons">
