--- a/src/app/drivers/components/driver-detail/components/driver-information/driver-information.component.scss
+++ b/src/app/drivers/components/driver-detail/components/driver-information/driver-information.component.scss
@@ -59,8 +59,8 @@ $text-margin: 5px;
   }
 }
 
-@include hovered-text;
+@include interactive-text;
 
 :host-context(.interactive-panel:hover) {
-  @include hovered-bg;
+  @include interactive-background;
 }
