--- a/src/app/drivers/components/driver-detail/components/driver-license/driver-license.component.html
+++ b/src/app/drivers/components/driver-detail/components/driver-license/driver-license.component.html
@@ -1,8 +1,8 @@
-<div class="license-container hovered-bg">
-  <div class="top hovered-bg">
+<div class="license-container interactive-background">
+  <div class="top interactive-background">
     <div class="left">
-      <span class="license-number hovered-text">{{driver.license.number}}</span>
-      <span class="license-class hovered-text">{{licenseClassText}}</span>
+      <span class="license-number interactive-text">{{driver.license.number}}</span>
+      <span class="license-class interactive-text">{{licenseClassText}}</span>
     </div>
     <div class="right">
       <span class="state-issued">{{driver.license.stateIssued}}</span>
@@ -12,11 +12,11 @@
   <div class="bottom">
       <div class="endorsements-container">
         <span class="bottom-label">Endors:</span>
-        <span class="types hovered-text">{{endorsements}}</span>
+        <span class="types interactive-text">{{endorsements}}</span>
       </div>
       <div class="restrictions-container">
         <span class="bottom-label">Restrict:</span>
-        <span class="types hovered-text">{{restrictions}}</span>
+        <span class="types interactive-text">{{restrictions}}</span>
       </div>
   </div>
 </div>
