--- a/src/app/drivers/components/driver-detail/components/driver-license/driver-license.component.scss
+++ b/src/app/drivers/components/driver-detail/components/driver-license/driver-license.component.scss
@@ -56,8 +56,8 @@ $element-height: 18px;
   }
 }
 
-@include hovered-text;
+@include interactive-text;
 
 :host-context(.interactive-panel:hover) {
-  @include hovered-bg;
+  @include interactive-background;
 }
