--- a/src/app/drivers/components/driver-detail/components/driver-payment-type/driver-payment-type.component.scss
+++ b/src/app/drivers/components/driver-detail/components/driver-payment-type/driver-payment-type.component.scss
@@ -16,8 +16,8 @@
   }
 }
 
-@include hovered-text;
+@include interactive-text;
 
 :host-context(.interactive-panel:hover) {
-  @include hovered-bg;
+  @include interactive-background;
 }
