--- a/src/app/equipment/components/equipment-detail/components/equipment-details/equipment-details.component.scss
+++ b/src/app/equipment/components/equipment-detail/components/equipment-details/equipment-details.component.scss
@@ -56,8 +56,8 @@
   }
 }
 
-@include hovered-text;
+@include interactive-text;
 
 :host-context(.interactive-panel:hover) {
-  @include hovered-bg;
+  @include interactive-background;
 }
