--- a/src/app/equipment/components/equipment-detail/components/equipment-mileage/equipment-mileage.component.html
+++ b/src/app/equipment/components/equipment-detail/components/equipment-mileage/equipment-mileage.component.html
@@ -1,6 +1,6 @@
-<div class="mileage-container hovered-bg">
+<div class="mileage-container interactive-background">
     <div class="info-container">
-        <span class="value hovered-text">{{mileage.value}}</span>
+        <span class="value interactive-text">{{mileage.value}}</span>
         <span class="type">{{mileage.type}}</span>
     </div>
     <div class="date-container">
