--- a/src/app/forms/mileage-form/mileage-form.component.html
+++ b/src/app/forms/mileage-form/mileage-form.component.html
@@ -9,7 +9,7 @@
     class="bd-form-control middle-control mileage-date"
     formControlName="date">
   </bd-form-datepicker>
-  <div class="btn-container hovered-bg right-control">
+  <div class="btn-container interactive-background right-control">
     <button
         class="btn-remove icon-minus"
         (click)="removeMileage()"
