--- a/src/app/shared/components/bd-form-section/bd-form-section.component.html
+++ b/src/app/shared/components/bd-form-section/bd-form-section.component.html
@@ -1,7 +1,7 @@
 <div
   *ngIf='isLabelVisisble'
   [class.bd-disabled]="disabled"
-  class="bd-section-title hovered-text">
+  class="bd-section-title interactive-text">
     {{labelText}}
 </div>
 <ng-content>
