--- a/src/app/companies/components/company-detail/components/company-basic-information/company-basic-information.component.html
+++ b/src/app/companies/components/company-detail/components/company-basic-information/company-basic-information.component.html
@@ -1,23 +1,23 @@
-<div class="basic-information-container hovered-bg">
+<div class="basic-information-container interactive-background">
   <div class="left">
     <bd-company-circle
       class="initials-circle"
       [companyName]="company.name"
       >
     </bd-company-circle>
-    <div class="name-type hovered-text">
-      <div class="name hovered-text">{{company.name}}</div>
+    <div class="name-type interactive-text">
+      <div class="name interactive-text">{{company.name}}</div>
         <div class="type">{{typeText}}</div>
     </div>
   </div>
   <div class="right">
     <div class="mc-container">
       <span class="right-label">MC#:</span>
-      <span class="mc hovered-text">{{company.mc}}</span>
+      <span class="mc interactive-text">{{company.mc}}</span>
     </div>
     <div class="tax-id-container">
       <span class="right-label">Tax-ID (W9):</span>
-      <span class="tax-id hovered-text">{{company.taxId}}</span>
+      <span class="tax-id interactive-text">{{company.taxId}}</span>
     </div>
   </div>
 </div>
