--- a/src/app/companies/components/company-detail/components/company-contact/company-contact.component.scss
+++ b/src/app/companies/components/company-detail/components/company-contact/company-contact.component.scss
@@ -28,8 +28,8 @@ $element-height: 18px;
   }
 }
 
-@include hovered-text;
+@include interactive-text;
 
 :host-context(.interactive-panel:hover) {
-  @include hovered-bg;
+  @include interactive-background;
 }
