--- a/src/app/equipment/components/equipment-detail/components/equipment-employment/equipment-employment.component.html
+++ b/src/app/equipment/components/equipment-detail/components/equipment-employment/equipment-employment.component.html
@@ -1,4 +1,4 @@
-<div class="employment-container hovered-bg">
+<div class="employment-container interactive-background">
     <section class="general-info left">
         <div class="vin">
             <span class="value">VIN: {{equipment.vin}}</span>
