--- a/src/app/equipment/components/equipment-detail/components/equipment-mileage/equipment-mileage.component.scss
+++ b/src/app/equipment/components/equipment-detail/components/equipment-mileage/equipment-mileage.component.scss
@@ -21,8 +21,8 @@
   }
 }
 
-@include hovered-text;
+@include interactive-text;
 
 :host-context(.interactive-panel:hover) {
-  @include hovered-bg;
+  @include interactive-background;
 }
