--- a/src/app/shared/components/bd-button-switch/bd-button-switch.component.html
+++ b/src/app/shared/components/bd-button-switch/bd-button-switch.component.html
@@ -1,4 +1,4 @@
-<div class="bd-switch-container hovered-bg" [class.bd-disabled]="disabled">
+<div class="bd-switch-container interactive-background" [class.bd-disabled]="disabled">
   <div class="bd-switch-label" *ngIf="!hideLabel">
     {{labelText}}
   </div>
@@ -6,7 +6,7 @@
     <button
       *ngFor="let item; of:items; let i=index"
       type='button'
-      class="hovered-text"
+      class="interactive-text"
       [class.active]="isActive(item)"
       (click)="_handleItemClick($event, item)">
         {{displayText(item)}}
