--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
@@ -164,8 +164,8 @@
   }
 }
 
-@include hovered-text;
+@include interactive-text;
 
 :host-context(.interactive-panel:hover) {
-  @include hovered-bg;
+  @include interactive-background;
 }
