--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -30,20 +30,20 @@
     color: $dark-grey;
   }
 }
-@mixin hovered-text {
-  .hovered-text {
+@mixin interactive-text {
+  .interactive-text {
     color: $dark-grey;
     transition: all 500ms;
   }
 }
 
-@mixin hovered-bg {
+@mixin interactive-background {
   .hovered-text {
     color: $black;
     transition: all 500ms;
   }
 
-  .hovered-bg {
+  .interactive-background {
     background: $white;
     border-bottom: $border;
     transition: all 500ms;
