--- a/src/app/shared/components/bd-validator/components/bd-validator/bd-validator.component.html
+++ b/src/app/shared/components/bd-validator/components/bd-validator/bd-validator.component.html
@@ -1,2 +1,2 @@
 <ng-content></ng-content>
-<bd-validator-message *ngIf='shouldShowInlineMessage' message="errorMessage"> </bd-validator-message>
+<bd-validator-message *ngIf='shouldShowInlineMessage' [message]="errorMessage"> </bd-validator-message>
