FSPA-540 fix alert font size

--- a/src/app/shared/components/bd-validator/components/bd-validator-message/bd-validator-message.component.scss
+++ b/src/app/shared/components/bd-validator/components/bd-validator-message/bd-validator-message.component.scss
@@ -5,6 +5,7 @@
   height: 35px;
   background: $light-red;
   color: $label-warning-color;
+  font-size: $tiny-font-size;
   text-align: left;
   align-items: center;
   border-bottom: $border;
